[package]
name = "numkong"
description = "Portable mixed-precision BLAS-like vector math library for x86 and ARM"
version = "6.5.12"
edition = "2021"
license = "Apache-2.0"
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
repository = "https://github.com/ashvardanian/NumKong"
documentation = "https://docs.rs/numkong"
homepage = "https://ashvardanian.com/posts/numkong-faster-scipy"
keywords = ["simd", "search", "linear-algebra", "vector"]
categories = [
  "mathematics",
  "hardware-support",
  "no-std",
  "wasm",
  "external-ffi-bindings",
]
rust-version = "1.64" # Introduced Core C FFI in stable Rust
include = ["rust/**", "c/**", "include/**", "build.rs"]


[lib]
name = "numkong"
path = "rust/numkong.rs"

[build-dependencies]
cc = "1.2.36"


[[bench]]
name = "bench"
harness = false
path = "scripts/bench.rs"

[profile.bench]
opt-level = 3     # Corresponds to -O3
lto = true        # Enables Link Time Optimization for further optimizations
codegen-units = 1 # May increase compilation time but optimizes further
rpath = false     # On some systems, setting this to false can help with optimizations

[features]
default = []
std = []
parallel = ["dep:fork_union", "std"]
wasm-runtime = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
fork_union = { version = "2.3", optional = true }
wasmtime = { version = "41.0", optional = true }
wasmtime-wasi = { version = "41.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8.1" }
rand = { version = "0.10.0" }
half = { version = "2.6.0" }
